# mrsh

./: AUTHORS  BUGS  ChangeLog  DISCLAIMER  DISCLAIMER.UC  INSTALL  META  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  configure  configure.ac  mrsh.spec.in
.github/workflows/: build.yml
common/: Makefile.am  Makefile.in  common_defs.h  fd.c  fd.h  version.h
config/: ac_crypt.m4  ac_forkpty.m4  ac_gethostbyname_r.m4  ac_ipv6.m4  ac_logwtmp.m4  ac_mauth.m4  ac_mcmd.m4  ac_munge.m4  ac_ncurses.m4  ac_pam.m4  ac_shadow.m4  ac_signals.m4  ac_snprintf.m4  ac_socklen.m4  ac_struct_sa_len.m4  acx_pthread.m4  config.h.in
doc/: Makefile.am  Makefile.in  in.mrexecd.8  in.mrlogind.8  in.mrshd.8  mrcp.1  mrexec.1  mrexecd.8  mrlogin.1  mrlogind.8  mrsh.1  mrshd.8
etc/: Makefile.am  Makefile.in  mrexecd-xinetd  mrlogind-xinetd  mrshd-xinetd
etc/pam/: Makefile.am  Makefile.in  mrlogin  mrsh
etc/systemd/: Makefile.am  Makefile.in  mrlogind.socket  mrlogind@.service  mrshd.socket  mrshd@.service
etc/xinetd/: Makefile.am  Makefile.in  mrlogind  mrshd
mauth/: Makefile.am  Makefile.in  mauth.c  mauth.h
mcmd/: Makefile.am  Makefile.in  mcmd.c  mcmd.h
mrcp/: Makefile.am  Makefile.in  mrcp.c  pathnames.h
mrexec/: Makefile.am  mrexec.c
mrexecd/: Makefile.am  mrexecd.c
mrlogin/: Makefile.am  Makefile.in  des_rw.c  mrlogin.c
mrlogind/: Makefile.am  Makefile.in  auth.c  logwtmp.h  mrlogind.c  mrlogind.h  network.c  pathnames.h  sockconv.c
mrsh/: Makefile.am  Makefile.in  mrsh.c  pathnames.h
mrshd/: Makefile.am  Makefile.in  list.c  list.h  mrshconv.c  mrshd.c
rsh-compat/: Makefile.am  Makefile.in  in.rlogind.8  rcp.1  rlogin.1  rlogind.8  rsh.1  rshd.8
