##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include config/Make-rpm.mk

SUBDIRS = common doc etc mcmd mauth mrcp mrlogin mrlogind mrsh mrshd rsh-compat
