##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = common doc etc mcmd mauth mrcp mrlogin mrlogind mrsh mrshd rsh-compat

EXTRA_DIST = DISCLAIMER DISCLAIMER.UC mrsh.spec
