##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

CPPFLAGS = -I.. -I../config

noinst_HEADERS = version.h fd.h

noinst_LTLIBRARIES = libfd.la

libfd_la_SOURCES = fd.c
