##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

noinst_HEADERS = version.h fd.h
noinst_LTLIBRARIES = libfd.la
libfd_la_SOURCES = fd.c
libfd_la_CFLAGS = -I.. -I../config
