##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

man1_MANS = mrcp.1 mrexec.1 mrlogin.1 mrsh.1 

man8_MANS = mrexecd.8 mrlogind.8 mrshd.8 in.mrexecd.8 in.mrlogind.8 in.mrshd.8
