##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

CPPFLAGS = -I../common -I../config

noinst_HEADERS = pathnames.h

bin_PROGRAMS = mrcp

mrcp_SOURCES = mrcp.c
