##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

CPPFLAGS = -I../common -I../config

bin_PROGRAMS = mrexec

mrexec_SOURCES = mrexec.c
