##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

CPPFLAGS = -I../common -I../config

bin_PROGRAMS = mrlogin

mrlogin_SOURCES = mrlogin.c des_rw.c
