##*****************************************************************************
## $Id$
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

if HAVE_SYSTEMD
systemdsystemunit_SCRIPTS = mrlogind.socket mrlogind@.service mrshd.socket mrshd@.service
endif

EXTRA_DIST = mrlogind.socket mrlogind@.service mrshd.socket mrshd@.service
